# geometry-sketchpad

./: .gitignore  Cargo.toml  README.md  a.ron
.github/workflows/: rust.yml
app/electron/: .gitignore  index.js  main.ts  package-lock.json  package.json  readme.md  tsconfig.json
app/electron/native/: Cargo.toml  index.d.ts
app/electron/native/src/: input.rs  lib.rs  output.rs  receiver_system.rs  sender_system.rs
app/electron/native/src/events/: mod.rs  render_update_event.rs  user_event.rs
app/electron/native/src/systems/: mod.rs  receiver_system.rs  sender_system.rs
app/electron/native/src/utilities/: event_emitter_task.rs  js_color.rs  js_key.rs  mod.rs
app/foundation/: Cargo.toml  readme.md
app/win/: Cargo.toml  asset.rc  build.rs  readme.md
app/win/src/: main.rs  win_gui.rs
core/foundation/: Cargo.toml
core/lib/: Cargo.toml  readme.md
core/piston/: Cargo.toml
core/ui/: Cargo.toml  readme.md
doc/: command_callback_design.md  event_handling.md  file_content.md  get_total_number_of_lines.md  interaction_scheme.md
doc/valuable_bugs/: aabb_y_max.md  line_aabb_intersect.md  sht_insert_circle.md  sht_manager_update.md
old/: Cargo.toml
src/: context.rs  lib.rs  main.rs  storage.rs
src.old/: main.rs
src.old/components/: line.rs  mod.rs
src.old/math/: line.rs
src.old/resources/: descendant_map.rs  dirty_state.rs  input_state.rs  spatial_hash_table.rs  tool_state.rs
src.old/systems/: change_tool_system.rs  compute_desendant.rs  mod.rs  (+5 more)
temp/: delta_time.rs  last_active_point.rs  snap_point.rs  snap_point_system.rs
tests/: lines.rs
(+447 files in other folders)
