[package]
name = "geometry-sketchpad"
version = "0.1.0"
authors = ["Liby Lee <liby99@icloud.com>"]
edition = "2018"

[dependencies]
piston_window = "0.98"
specs = "0.15"
shrev = "1.1"
itertools = "0.8"
rand = "0.7"
lazy_static = "1.4.0"
open = "1.3.2"

[target."cfg(windows)".dependencies]
native-windows-gui = "0.2.0"
user32-sys = "0.2.0"
winapi = "0.2.8"