[package]
name = "geopad-win"
version = "0.0.1"
authors = ["Liby Lee <liby99@icloud.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
embed-resource = "1.3.1"

[dependencies]
core-lib = { path = "../../core/lib" }
core-ui = { path = "../../core/ui" }
core-piston = { path = "../../core/piston" }
specs = "0.15"
shrev = "1.1"
native-windows-gui = { git = "https://github.com/tonnylyz/native-windows-gui" }
user32-sys = "0.2.0"
winapi = "0.2.8"
lazy_static = "1.4.0"
open = "1.3.2"
