[package]
name = "geopad-electron"
version = "0.0.1"
authors = ["Liby Lee <liby99@icloud.com>"]
edition = "2018"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "geopad_electron"
crate-type = ["dylib"]

[dependencies]
core-lib = { path = "../../../core/lib" }
core-ui = { path = "../../../core/ui" }
specs = "0.15"
shrev = "1.1"
neon = "0.3"

[build-dependencies]
neon-build = "0.3"